[project]
name = "croix_pharmacie"
version = "1.0.0"
description = "Ce projet permet de contrôler à distance l'affichage d'une croix de pharmacie. Si vous n'avez pas la chance de posséder une croix de pharmacie chez vous, le code vous permet également de simuler l'affichage localement."
authors = [
    { name = "Mathis Hammel" }
]
dependencies = [
	"pygame>=2.5.2",
	"opencv-python>=4.9",
	"moviepy>=1.0.3",
	"matplotlib>=3.7",
	"pydub>=0.25.1",
	"cydoomgeneric @ git+https://github.com/Baduit/cydoomgeneric",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
"audio_visualizer" = "croix_pharmacie.mains.audio_visualizer:main"
"cube" = "croix_pharmacie.mains.cube:main"
"doom" = "croix_pharmacie.mains.doom:main"
"example" = "croix_pharmacie.mains.example:main"
"falling_sand_simulation" = "croix_pharmacie.mains.falling_sand_simulation:main"
"flappyBird" = "croix_pharmacie.mains.flappyBird:main"
"plasma" = "croix_pharmacie.mains.plasma:main"
"pong" = "croix_pharmacie.mains.pong:main"
"rotozoom" = "croix_pharmacie.mains.rotozoom:main"
"simon" = "croix_pharmacie.mains.simon:main"
"snake" = "croix_pharmacie.mains.snake:main"
"tetris" = "croix_pharmacie.mains.tetris:main"
"videoplayer" = "croix_pharmacie.mains.videoplayer:main"
"visual_effects" = "croix_pharmacie.mains.visual_effects:main"
"youreundercontrol" = "croix_pharmacie.mains.youreundercontrol:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/croix_pharmacie"]
